--- a/agentdesk/docker-compose.yml
+++ b/agentdesk/docker-compose.yml
@@ -1,6 +1,34 @@
 version: '3.8'
 
 services:
+  api:
+    build: .
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql://agentdesk:agentdesk_dev@postgres:5432/agentdesk
+      - REDIS_URL=redis://redis:6379/0
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+    depends_on:
+      - postgres
+      - redis
+
+  frontend:
+    build: ./frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    environment:
+      - VITE_API_TARGET=http://api:8000
+    depends_on:
+      - api
+
   postgres:
     image: postgres:15-alpine
     environment:
