--- a/agentdesk/frontend/Dockerfile
+++ b/agentdesk/frontend/Dockerfile
@@ -1,12 +1,10 @@
-FROM node:18-alpine
+FROM node:16
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json .
 RUN npm install
 
 COPY . .
 
-EXPOSE 3000
-
-CMD ["npm", "run", "dev", "--", "--host"]
+CMD ["npm", "run", "dev"]
