--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,44 @@
+[plugin:vite:css] Failed to load PostCSS config (searchPath: /app): [Error] Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
+Require stack:
+- /app/postcss.config.js
+
+(@/app/postcss.config.js)
+Error: Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
+Require stack:
+- /app/postcss.config.js
+
+(@/app/postcss.config.js)
+    at load (file:///app/node_modules/vite/dist/node/chunks/config.js:7660:10)
+    at async Promise.all (index 0)
+    at async plugins (file:///app/node_modules/vite/dist/node/chunks/config.js:7682:11)
+    at async processResult (file:///app/node_modules/vite/dist/node/chunks/config.js:7721:13)
 version: '3.8'
 
 services:
   backend:
-    build: ./agentdesk/backend
-    ports:
-      - "8000:8000"
+    build: 
+      context: ./agentdesk/backend
+      network: host
+    network_mode: host
     volumes:
       - ./agentdesk/backend:/app
+    environment:
+      - DATABASE_URL=postgresql://user:password@localhost:5433/db
     depends_on:
       - db
   frontend:
-    build: ./agentdesk/frontend
-    ports:
-      - "3000:3000"
+    build: 
+      context: ./agentdesk/frontend
+      network: host
+    network_mode: host
     volumes:
       - ./agentdesk/frontend:/app
     depends_on:
       - backend
   db:
     image: postgres:13
+    ports:
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
