--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,36 +15,130 @@ Require stack:
 version: '3.8'
 
 services:
+  # PostgreSQL Database
+  db:
+    image: postgres:16-alpine
+    container_name: agentdesk_postgres
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./agentdesk/backend/app/database/init_scripts.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER:-agentdesk}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-agentdesk_dev_password}
+      - POSTGRES_DB=${POSTGRES_DB:-agentdesk_dev}
+      - POSTGRES_INITDB_ARGS=--encoding=UTF8 --locale=en_US.UTF-8
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=200"
+      - "-c"
+      - "shared_buffers=256MB"
+      - "-c"
+      - "effective_cache_size=1GB"
+      - "-c"
+      - "maintenance_work_mem=128MB"
+      - "-c"
+      - "checkpoint_completion_target=0.9"
+      - "-c"
+      - "wal_buffers=16MB"
+      - "-c"
+      - "default_statistics_target=100"
+      - "-c"
+      - "random_page_cost=1.1"
+      - "-c"
+      - "effective_io_concurrency=200"
+      - "-c"
+      - "work_mem=4MB"
+      - "-c"
+      - "min_wal_size=1GB"
+      - "-c"
+      - "max_wal_size=4GB"
+      - "-c"
+      - "log_statement=all"
+      - "-c"
+      - "log_duration=on"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-agentdesk} -d ${POSTGRES_DB:-agentdesk_dev}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Redis for caching and session management
+  redis:
+    image: redis:7-alpine
+    container_name: agentdesk_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+
+  # Backend API
   backend:
-    build: 
+    build:
       context: ./agentdesk/backend
       network: host
+    container_name: agentdesk_backend
+    restart: unless-stopped
     network_mode: host
     volumes:
       - ./agentdesk/backend:/app
     environment:
-      - DATABASE_URL=postgresql://user:password@localhost:5433/db
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-agentdesk}:${POSTGRES_PASSWORD:-agentdesk_dev_password}@localhost:5432/${POSTGRES_DB:-agentdesk_dev}
+      - REDIS_URL=redis://localhost:6379/0
+      - ENVIRONMENT=development
+      - LOG_LEVEL=DEBUG
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  # Frontend Web Application
   frontend:
-    build: 
+    build:
       context: ./agentdesk/frontend
       network: host
+    container_name: agentdesk_frontend
+    restart: unless-stopped
     network_mode: host
     volumes:
       - ./agentdesk/frontend:/app
     depends_on:
       - backend
-  db:
-    image: postgres:13
+
+  # pgAdmin for database management (optional, for development)
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: agentdesk_pgadmin
+    restart: unless-stopped
     ports:
-      - "5433:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - "5050:80"
     environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=db
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL:-admin@agentdesk.dev}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD:-admin}
+      - PGADMIN_CONFIG_SERVER_MODE=False
+      - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=False
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - db
+    profiles:
+      - dev
 
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+  pgadmin_data:
+    driver: local
